fixed visibility of link

--- a/map/index.html
+++ b/map/index.html
@@ -417,7 +417,7 @@
 					limitations contained in the Court's Order and Stipulated Injunction and which apply to certain 
 					pesticides in certain geographic areas within the state of California. There are some exceptions to 
 					the interim use limitations which may be found on EPA's 
-					<a target="_blank" href="http://www2.epa.gov/endangered-species/interim-use-limitations-eleven-threatened-or-endangered-species-san-francisco-b-0">Interim Use Limitations page</a>. 
+					<a target="_blank" style="color: yellow;" href="http://www2.epa.gov/endangered-species/interim-use-limitations-eleven-threatened-or-endangered-species-san-francisco-b-0">Interim Use Limitations page</a>.
 					If you have not already done so, you should review the Background and Exceptions information on that page  
 					to determine whether the interim limitations apply to your use of a pesticide.</p>
 					<p>Because interim use limitations may be changed or deleted as EPA continues to review the 75 
